# Ya_asteroids

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
Cmake_module/: FindSDL2_ttf.cmake
cmake_find/: FindSDL2_image.cmake
src/: Init_SDL2.h  Start_game.cpp  start_game.cpp
src/bullets/: Bullet_graphics_component.cpp  Bullet_graphics_component.h  Bullet_input_component.cpp  Bullet_input_component.h  Bullet_physics_component.cpp  Bullet_physics_component.h  bullet.cpp  bullet.h  bullet_gfx.cpp  bullet_gfx.h  bullet_graphics_comp.cpp  bullet_graphics_comp.h  bullet_graphics_component.cpp  bullet_graphics_component.h  bullet_helpers.cpp  bullet_helpers.h  bullet_input.cpp  bullet_input.h  bullet_input_comp.cpp  bullet_input_comp.h  bullet_input_component.cpp  bullet_input_component.h  bullet_physics.cpp  bullet_physics.h  bullet_physics_comp.cpp  bullet_physics_comp.h  bullet_physics_component.cpp  bullet_physics_component.h
src/debug_info/: Frames_debug_info.cpp  Frames_debug_info.h  Graphics_debug_info.cpp  Graphics_debug_info.h  Objects_debug_info.cpp  Objects_debug_info.h  frames_debug.cpp  frames_debug.h  frames_debug_info.cpp  frames_debug_info.h  graphics_debug.cpp  graphics_debug.h  graphics_debug_info.cpp  graphics_debug_info.h  objects_debug.cpp  objects_debug.h  objects_debug_info.cpp  objects_debug_info.h
src/images/: Load_image.h  Texture_shelf.cpp  Texture_shelf.h  texture_shelf.cpp  texture_shelf.h
src/init/: Constants.h  Init_SDL2.h  SDL2_lib.cpp  SDL2_lib.h  constants.h  sdl2_helpers.cpp  sdl2_helpers.h  sdl2_lib.cpp  sdl2_lib.h  sdl2_util.cpp  sdl2_util.h
src/scenes/: Avoid_asteroids_scene.h  Control_spaceships_scene.h  Destroy_asteroids_scene.cpp  Destroy_asteroids_scene.h  Scene.h  Two_spaceships_scene.h  avoid_asteroids_scene.h  control_spaceships_scene.h  destroy_asteroids_scene.cpp  destroy_asteroids_scene.h  scene.h  two_spaceships_scene.h
src/shared/: Game_object.cpp  Game_object.h  Game_object_meta.h  Game_object_motion.h  Game_object_utils.cpp  Game_object_utils.h  Graphics.h  Graphics_component.cpp  Graphics_component.h  Input_component.h  Object_name.h  Object_position.h  Physics_component.cpp  Physics_component.h  Space.h  game_object.cpp  game_object.h  game_object_meta.h  game_object_motion.h  game_object_utils.cpp  game_object_utils.h  game_objects_helpers.cpp  game_objects_helpers.h  gfx_comp.cpp  gfx_comp.h  gfx_helpers.cpp  gfx_helpers.h  graphics.h  graphics_comp.cpp  graphics_comp.h  graphics_component.cpp  graphics_component.h  input_comp.h  input_component.h  obj_meta.h  obj_motion.h  obj_name.h  object_name.h  physics_comp.cpp  physics_comp.h  (+4 more)
src/spaceship/: Spaceship1_graphics_component.cpp  Spaceship1_graphics_component.h  Spaceship1_input_component.cpp  Spaceship1_input_component.h  Spaceship1_physics_component.h  Spaceship2_graphics_component.cpp  Spaceship2_graphics_component.h  Spaceship2_input_component.h  Spaceship2_physics_component.h  spaceship.cpp  spaceship.h  spaceship1_gfx.cpp  spaceship1_gfx.h  spaceship1_graphics_comp.cpp  spaceship1_graphics_comp.h  spaceship1_graphics_component.cpp  spaceship1_graphics_component.h  spaceship1_input.cpp  spaceship1_input.h  spaceship1_input_comp.cpp  spaceship1_input_comp.h  spaceship1_input_component.cpp  spaceship1_input_component.h  spaceship1_physics.h  spaceship1_physics_comp.cpp  spaceship1_physics_comp.h  spaceship1_physics_component.h  spaceship2_gfx.cpp  spaceship2_gfx.h  spaceship2_graphics_comp.cpp  spaceship2_graphics_comp.h  spaceship2_graphics_component.cpp  spaceship2_graphics_component.h  spaceship2_input.h  spaceship2_input_comp.cpp  spaceship2_input_comp.h  spaceship2_input_component.h  spaceship2_physics.h  spaceship2_physics_comp.cpp  spaceship2_physics_comp.h  (+5 more)
src/text/: Render_text.cpp  Render_text.h  render_text.cpp  render_text.h
